# ragbot

./: README.md  pyproject.toml  reflection.txt  requirements.txt
docs/: PLAN.md  sample_questions.txt
logs/: README.md  logs.txt
scripts/: ask_questions.py  run_ingestion.py
src/: config.py
src/agent/: __init__.py  agent.py  metrics.py  prompt.py  runner.py  tools.py
src/data_loader/: audio_transcriber.py  pdf_loader.py
src/embeddings/: openai_embeddings.py
src/rag/: chatbot.py  pipeline.py
src/text_processing/: chunker.py
src/vectorstore/: qdrant_store.py
